--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,80 @@
 body {
   height: 100vh;
-  margin: 0
+  margin: 0;
+  font-family: "Montserrat", "Helvetica Neue", Arial, sans-serif;
+}
+
+.content-center {
+  padding: 40px;
+
+}
+
+.title {
+  font-weight: 700;
+  color: #212121;
+  font-size: 35px;
+}
+
+.category {
+  color: #212121;
+  font-weight: 600;
+}
+
+p {
+  color: #fff;
+}
+
+.botão {
+  background-color: #ff4f93;
+  border: 2px solid #212121;
+  border-radius: 30px;
+  padding: 12px 16px;
+  font-size: 16px;
+  color: #212121;
+  margin: 5px 1px;
+  text-decoration: none;
+
+}
+
+.botão:hover {
+  background-color: #ff6da5;
+}
+
+i {
+  padding: 0 8px 0 0;
+}
+
+.btn.btn-link, .navbar .navbar-nav > a.btn.btn-link {
+  color: rgb(255, 255, 255);
+  padding: 0.5rem 0.7rem;
+  font-size: 0.8571em;
+}
+
+
+.btn {
+  display: inline-block;
+  border-width: 2px;
+  font-weight: 400;
+  line-height: 1.35em;
+  margin: 2px 1px;
+  padding: 11px 22px;
+  cursor: pointer;
+}
+
+.button{
+  background-color: #ff4f93;
+  border: 2px solid #212121;
+  color: #212121;
+  border-radius: 30px;
+  padding: 12px 16px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 5px 1px;
+}
+
+.button-container {
+  text-align: center;
+  margin-top: -106px;
 }
 
 .box {
@@ -19,11 +93,21 @@ body {
     flex-basis: auto;
 }
 
-.fundo {
-  background-color: #212121;
-  border-radius: 87px 87px 0 0;
+.section {
+  background-color: #ff4f9200;
   flex-grow: 1;
   flex-basis: auto;
+}
+
+.border {
+  border-radius: 87px 87px 0 0;
+  background-color: #212121;
+
+}
+
+.fundo {
+  background-color: #ff4f93;
+  
 }
 
 .context {
